--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <meta property="article:author" content="https://mehulkothari05.medium.com">
     <meta name="twitter:creator" content="@Mehulk2011">
     <meta name="robots" content="index,follow,max-image-preview:large">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="./assets/css/aos.css" rel="stylesheet">
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
